--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/actions/checkout.git"
+    "url": "git+https://github.com/rebelware/checkout.git"
   },
   "keywords": [
     "github",
@@ -22,9 +22,9 @@
   "author": "GitHub",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/actions/checkout/issues"
+    "url": "https://github.com/rebelware/checkout/issues"
   },
-  "homepage": "https://github.com/actions/checkout#readme",
+  "homepage": "https://github.com/rebelware/checkout#readme",
   "dependencies": {
     "@actions/core": "^1.1.3",
     "@actions/exec": "^1.0.1",
